--- a/index.css
+++ b/index.css
@@ -1,5 +1,7 @@
 html{
-    font-family: sans-serif; 
+    font-size: large;
+    padding:50px;
+    text-align:center;
 }
 .pomodoro-estimate{
     font-weight: bold;
@@ -27,5 +29,23 @@ html{
 }
 li{
     padding: 5px;
-    margin-bottom: 10px
+    margin-bottom: 40px
 }
+body{
+    background-color: #339933;
+}
+#name{
+    border-style: double;
+}
+.thing-todo{
+    font-size: 50px;
+    border-style: groove;
+    padding: 10px;
+    font-family: 'Shadows Into Light', cursive;
+    box-shadow: 10px 5px 10px 5px;
+    background-color: #ffa500;
+}
+ul{
+    list-style-type: none;
+}
+    
